Fixed issue where column rol was squished on phone format on dashboard page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -423,7 +423,7 @@ footer {
 				table {
 					tbody, thead {
 						tr {
-							td:first-child, th:first-child {
+							td.image, th.image {
 								width: 30%;
 							}
 						}
